tests/errors/error_wrong_argcount.nimmy
# Error: Calling function with wrong number of arguments
proc greet(name, age) =
  echo name

greet("Alice")